--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "planta",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp setup"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -16,28 +16,25 @@
     "url": "https://github.com/depemu/planta/issues"
   },
   "homepage": "https://github.com/depemu/planta#readme",
-  "devDependencies": {
-    "beeper": "^1.1.1",
-    "bourbon": "^5.1.0",
-    "bourbon-neat": "^3.0.1",
-    "browser-sync": "^2.26.3",
+  "dependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "browser-sync": "^2.26.12",
     "compass-mixins": "^0.12.10",
-    "gulp": "^3.2.0",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-cache": "^1.1.1",
-    "gulp-clean-css": "^4.0.0",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^5.0.3",
-    "gulp-notify": "^3.2.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
-    "mustart-gradients": "0.0.6",
-    "mustart-media-queries": "0.0.7"
-  },
-  "dependencies": {}
+    "minimist": "^1.2.3",
+    "mustart-gradients": "0.0.6"
+  }
 }
